Fix collapsed layout on inventory view

--- a/src/less/_inventory.less
+++ b/src/less/_inventory.less
@@ -66,8 +66,13 @@
 
     .short {
         width: 75%;
-        margin-left: 5rem;
+        margin: 0 auto;
         text-align: left;
+
+    }
+
+    .item-description {
+        font-weight: normal;
     }
 
     .title {
